@@ -23,6 +23,7 @@ MBDyn 1.X-Devel
 		- fixed (harmless?) off-by-one read in fixed step drive
 		- fixed bugs in timestep control (Reinhard Resch)
 		- fixed default max time step (Reinard Resch)
+		- fixed build without libmbc (noted by Richard Crozier)
 
 MBDyn 1.7.2
 	Enhancements:
